<resources>
    <string name="app_name">NotesApp</string>
    <string name="my_notes">My Notes</string>
    <string name="Search">Search your notes</string>

    <!-- Strings related to Home page -->
    <string name="Welcome">Welcome!</string>
    <string name="Notes">Notes is an app that helps you save your important notes or ideas in an efficient and easy way. Enjoy your way to better time management!</string>
    <string name="Login">Log in</string>
    <string name="SignUp">Sign Up</string>
    <string name="Forgot">Forgot Password?</string>

    <!-- Strings related to SignUp page -->
    <string name="Create">Create an Account</string>
    <string name="Already">Already registered?  Sign in</string>
    <string name="password">Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to Create note page -->
    <string name="Note_title">Notes Title</string>
    <string name="Note_subtitle">Notes Subtitle</string>
    <string name="Note_dec">Enter Notes Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="web_url">web_url</string>
</resources>