<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.create_noteFragment">

    <ImageView
        android:id="@+id/imgBacke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


    <EditText
        android:id="@+id/notes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/Note_title"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBacke" />


    <TextView
        android:id="@+id/datetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes_title" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datetext">


        <View
            android:id="@+id/colorView"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@color/yellow" />

        <EditText
            android:id="@+id/notes_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/Note_subtitle"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/dark_gray"
            android:textSize="10dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">

        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="24dp"
            android:layout_height="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutWebUrl"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/etWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="http://"
                android:textColor="@color/dark_gray"
                android:textSize="12sp" />
            <ImageView
                android:id="@+id/imgUrlDelete"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_cancel_24" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/teal_600"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/btnCancel"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/teal_600"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:id="@+id/btnOk"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:visibility="gone"
        android:padding="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

    <EditText
        android:id="@+id/notes_dec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@null"
        android:hint="@string/Note_dec"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/img_bar" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>